@@ -1,3 +1,12 @@
+2026-02-15T01:57:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22027876405 # 878
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-15
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 218 285 / 220 287
+* notice: next accum: outdated-unq outdated-all / unq all: 219 286 / 221 288
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-15 2026-01-16 2026-01-17 2026-01-18 2026-01-19 2026-01-20 2026-01-21] / []
+
 2026-02-14T01:48:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22008903413 # 877
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-14
